--- a/Quanlythuvien/Views/ucFrom/DocGias/ucDocgiaExtra.resx
+++ b/Quanlythuvien/Views/ucFrom/DocGias/ucDocgiaExtra.resx
@@ -210,7 +210,7 @@
         TkSuQmCC
 </value>
   </data>
-  <data name="gtxtMa.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="gtxtma.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAJ5JREFUSEvt
         k90JgDAMhDtJ21EcSHBkF3AHf0qOnCWRioo++MFhm7ukUDX8fIecc5dSmu/QNkvGKlbwimSs4hon+dYB
