đang làm phếu tra

--- a/Quanlythuvien/Views/ucFrom/PhieuTra/ucPhieuTraExtra.resx
+++ b/Quanlythuvien/Views/ucFrom/PhieuTra/ucPhieuTraExtra.resx
@@ -190,7 +190,7 @@
         CRaOGH2Fik9+DyOe4uCE2Rf8KtTwpJbmCDUbq0SIN7H0uwhkGBWAAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="gtxtTacgia.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="gtxttienphat.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAWFJREFUSEvd
         lD1OxDAUhHOQ/BeUSDQ0SFAgGg5Au8fgFrtXoOEsaULBYbZDWmaseU7WsZ2k3U960npmnu04WRe3T13X
@@ -202,7 +202,7 @@
         TkSuQmCC
 </value>
   </data>
-  <data name="gtxtma.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="gtxtmaphieutra.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAJ5JREFUSEvt
         k90JgDAMhDtJ21EcSHBkF3AHf0qOnCWRioo++MFhm7ukUDX8fIecc5dSmu/QNkvGKlbwimSs4hon+dYB
