--- a/Quanlythuvien/Views/frmLogin.resx
+++ b/Quanlythuvien/Views/frmLogin.resx
@@ -1,4 +1,64 @@
-﻿<root>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<root>
+  <!--
+    Microsoft ResX Schema
+
+    Version 2.0
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
+    associated with the data types.
+
+    Example:
+
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+
+    There are any number of "resheader" rows that contain simple
+    name/value pairs.
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
+    mimetype set.
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
+    extensible. For a given mimetype the value must be set accordingly:
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
+    read any of the formats listed below.
+
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
@@ -57,4 +117,49 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="gpican.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAaJJREFUSEvt
+        lDFLw1AUhTvp4iYFSZqklboEEUEHHXRy6qaggz9DBzsoCA6C6CT+nC5OIv6BDi6io1JxsFs993luepOm
+        rWLo5IEDud+97500r0npXz9WFEXdMAxPWRarSqWyhICeOBsCtgO/a9+4g9ldjo0XFqzrYhuCuq18hFsc
+        Hy1svKWLbEitVot4mahara5h5t6E9PAkFtjOF4YadoENwfWt6b0FQeCxJeuetQe+SZwW0n0dgs/02oag
+        flQuxmaLbEnvWnm5XJ4h7kub8JXU2DhWZkNEnucF2iNywtx5HpfNT9j4JHJCvU0+EAJ2wV6DyAlzH+TH
+        RP27r9fr00ROGG5qT2xDcMjLZE0ipziOp3SeyAUcEnaInFCnDl1sQ1C3cQ6rLJ3AXjh7SfQtQvENkZPh
+        iW2IFXr6qNNnIPJ9f1abcJKOzVYMT5wNQX1kevPEaeHnbpihJ2J53nNgA58LG4L6jmyPKF/2L0g/ZF+e
+        zI0kIUPvPE9Y3NJNxtmG/FrYYB/O+5q+wgda/ylklLDx0De+ME06pEtUvCSEl5NSqfQFANbqqXB9m8EA
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="gpichien.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAARNJREFUSEvt
+        lDsKwlAQRVOKnYUQAvmAndi5AW0ssgELVxLsRDs7Kzdg43Z0A2KpgqU28c7jTn4ERUhExAODvDPz5n1i
+        Yv35fnzfnyDOiLgQpyAIxix7HzTYFho+iy2nvcbzvFZh8t513RHTCfBDxC5TF6POYbocHHmgxVjoQC3e
+        hrtqDnHJNsP4qDnpQZ1HJmgRYkktJ+pnfC4wp8cyWWSlXm6BOkWTiA2VQb1t220q2UxHPZUBjddlXppM
+        mbhRGTAO6RdUCXBz5kIqA8Z3+hlVukvcX4PKgB1F4vHbpUqQ62EuojI4jtPUflQfOIFAKVH9MxBq/xcJ
+        tb4HiqyuxYzq3uQsmFDPt6gIJtfzNf3zK1jWA/Lyzboe5FdBAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="gtxtUsername.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAWFJREFUSEvd
+        lD1OxDAUhHOQ/BeUSDQ0SFAgGg5Au8fgFrtXoOEsaULBYbZDWmaseU7WsZ2k3U960npmnu04WRe3T13X
+        fdM0A+oS1EBPsf20bfsSmTRazKptG9jZ12yCM8avsjzU6FmOPbLyIHiypqqqniUnYWa2yElynPmxSPJA
+        +zGPvyV7zMsel4WwkydJDtPDku1gT0z39H1/p8BZkgPjh7DRxvQkOTB274RzSZqAMarpXZIDO/uUfpTE
+        7JEaPUkO9io7SpqQsXi8ruvuQ8/G9CR5wqwnaQDzwpJ9RdLLNRF4v5bhb8kLLKPhRNLYSW4Bd9/gxX1I
+        2g17tcAgaQImL7XF6mVZPkKzL2xeIz3FHOZxLknXWAD/xgOqtfFaMQsONtZ0SxCK3aB/2NGbIh5q9ILs
+        +s2KxvlN+i05CTOWZ6/kPAj6GxW16QnYI2sbieOK1uqx5NAlGP2KopfajVEU/6ml8EPaFxd4AAAAAElF
+        TkSuQmCC
+</value>
+  </data>
+  <data name="gtxtPassword.IconLeft" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAANBJREFUSEvt
+        lDkOwjAQRX0OJG/iAhyBhgJKSiokLsIJuQEt9IgKkOA7+ROBTSAOpPOTRpn5nsXOpgqF/2Ot3cDuka24
+        /BtodIkaN2aMuTKtH2hyk2bee0tZaa3HosPOlPNwzq2lCaWEpyFfDafdsqxGFrDbUYgxcCpa8KlNROti
+        L0NEZJjslnInkL+QumZI3EjiWG8DOXO6nwdk3qJd0HE9MN7D0uYBFA/7kANYyHpN4Z+oHRlXJ3nbXEBC
+        1ocGfUm3Ajkzuu2gaLhfRaHQA6Uey4GqzrXT23UAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
